<?xml version="1.0" encoding="utf-8"?>
<!-- 桌面长按图标 → 快捷直达各工具（参考快捷方式类 App 的调用方式） -->
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="hash"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_hash_short"
        android:shortcutLongLabel="@string/shortcut_hash_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="crypto-pwa://?tab=hash"
            android:targetPackage="com.zaa.cryptpwa"
            android:targetClass="com.zaa.cryptpwa.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="enc"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_enc_short"
        android:shortcutLongLabel="@string/shortcut_enc_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="crypto-pwa://?tab=enc"
            android:targetPackage="com.zaa.cryptpwa"
            android:targetClass="com.zaa.cryptpwa.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="sym"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_sym_short"
        android:shortcutLongLabel="@string/shortcut_sym_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="crypto-pwa://?tab=sym"
            android:targetPackage="com.zaa.cryptpwa"
            android:targetClass="com.zaa.cryptpwa.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="qr"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_qr_short"
        android:shortcutLongLabel="@string/shortcut_qr_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="crypto-pwa://?tab=qr"
            android:targetPackage="com.zaa.cryptpwa"
            android:targetClass="com.zaa.cryptpwa.MainActivity" />
    </shortcut>
</shortcuts>
